--- a/.github/workflows/patch_patch.yml
+++ b/.github/workflows/patch_patch.yml
@@ -23,6 +23,11 @@ jobs:
           - "ghcr.io/aquasecurity/trivy-operator:0.16.1"
           - "quay.io/k8slens/bored-agent:0.12.8"
           - "quay.io/k8slens/recurly-api-proxy:0.5.3"
+          - "keycloak/keycloak:25.0"
+
+
+
+          
     steps:
       # 1. Trivy scan for OS-level vulnerabilities
       - name: Generate Trivy Report
