--- a/.github/workflows/patch_patch.yml
+++ b/.github/workflows/patch_patch.yml
@@ -20,10 +20,29 @@ jobs:
       #max-parallel: 2
       matrix:
         images:
+          - "docker.io/amazon/aws-cli:2.15.36"
+          - "docker.io/bitnami/discourse:3.0.6"
+          - "docker.io/bitnami/kubectl:1.27.12"
+          - "docker.io/curlimages/curl:8.7.1"
+          - "docker.io/listmonk/listmonk:v3.0.0"
+          - "docker.io/metabase/metabase:v0.52.2.3"
+          - "docker.io/victoriametrics/victoria-metrics:v1.108.1"
+          - "docker.io/victoriametrics/operator:v0.51.3"
+          - "docker.io/victoriametrics/vmagent:v1.108.1"
+          - "docker.io/victoriametrics/vmalert:v1.108.1"
           - "ghcr.io/aquasecurity/trivy-operator:0.16.1"
           - "quay.io/k8slens/bored-agent:0.12.8"
           - "quay.io/k8slens/recurly-api-proxy:0.5.3"
-          - "keycloak/keycloak:25.0"
+          - "quay.io/jetstack/cert-manager-cainjector:v1.14.4"
+          - "quay.io/jetstack/cert-manager-controller:v1.14.4"
+          - "quay.io/jetstack/cert-manager-webhook:v1.14.4"
+          - "quay.io/prometheus-operator/prometheus-config-reloader:v0.73.0"
+          - "quay.io/prometheus/alertmanager:v0.28.0"
+          - "quay.io/prometheus/blackbox-exporter:v0.25.0"
+          - "quay.io/prometheus/node-exporter:v1.8.2"
+          - "registry.k8s.io/autoscaling/cluster-autoscaler:v1.28.5"
+          - "registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.14.0"
+          - "registry.k8s.io/metrics-server/metrics-server:v0.7.1"
 
 
 
