--- a/.github/workflows/patch_patch.yml
+++ b/.github/workflows/patch_patch.yml
@@ -17,22 +17,43 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      #max-parallel: 2
+      #max-parallel: 5
       matrix:
         images:
-          - "docker.io/amazon/aws-cli:2.15.36"
-          - "docker.io/bitnami/discourse:3.0.6"
-          - "docker.io/bitnami/kubectl:1.27.12"
-          - "docker.io/curlimages/curl:8.7.1"
-          - "docker.io/listmonk/listmonk:v3.0.0"
-          - "docker.io/metabase/metabase:v0.52.2.3"
-          - "docker.io/victoriametrics/victoria-metrics:v1.108.1"
-          - "docker.io/victoriametrics/operator:v0.51.3"
-          - "docker.io/victoriametrics/vmagent:v1.108.1"
-          - "docker.io/victoriametrics/vmalert:v1.108.1"
-          - "ghcr.io/aquasecurity/trivy-operator:0.16.1"
-          - "quay.io/k8slens/bored-agent:0.12.8"
-          - "quay.io/k8slens/recurly-api-proxy:0.5.3"
+          - "amazon/aws-k8s-cni-init:v1.19.2"
+          - "amazon/aws-k8s-cni:v1.19.2"
+          - "amazon/aws-network-policy-agent:v1.1.6"
+          - "amazon/aws-guardduty-agent:v1.8.1"
+          - "amazon/aws-ebs-csi-driver:v1.38.1"
+          - "coredns/coredns:v1.11.4"
+          - "k8s.gcr.io/sig-storage/csi-attacher:v4.7.0"
+          - "k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.12.0"
+          - "k8s.gcr.io/sig-storage/csi-provisioner:v5.1.0"
+          - "k8s.gcr.io/sig-storage/csi-resizer:v1.12.0"
+          - "k8s.gcr.io/sig-storage/csi-snapshotter:v8.1.0"
+          - "k8s.gcr.io/kube-proxy:v1.29.11"
+          - "k8s.gcr.io/livenessprobe:v2.14.0"
+          - "amazon/aws-for-fluent-bit:2.32.2"
+          - "amazon/aws-cli:2.15.36"
+          - "bitnami/discourse:3.0.6"
+          - "bitnami/kubectl:1.27.12"
+          - "curlimages/curl:8.7.1"
+          - "istio/pilot:1.21.1"
+          - "istio/proxyv2:1.21.1"
+          - "listmonk/listmonk:v3.0.0"
+          - "metabase/metabase:v0.52.2.3"
+          - "victoriametrics/operator:config-reloader-v0.48.4"
+          - "victoriametrics/operator:v0.51.3"
+          - "victoriametrics/victoria-metrics:v1.108.1"
+          - "victoriametrics/vmagent:v1.108.1"
+          - "victoriametrics/vmalert:v1.108.1"
+          - "ghcr.io/fluxcd/helm-controller:v0.37.4"
+          - "ghcr.io/fluxcd/image-automation-controller:v0.37.1"
+          - "ghcr.io/fluxcd/image-reflector-controller:v0.31.2"
+          - "ghcr.io/fluxcd/kustomize-controller:v1.2.2"
+          - "ghcr.io/fluxcd/notification-controller:v1.2.4"
+          - "ghcr.io/fluxcd/source-controller:v1.2.4"
+          - "public.ecr.aws/eks/aws-load-balancer-controller:v2.7.2"
           - "quay.io/jetstack/cert-manager-cainjector:v1.14.4"
           - "quay.io/jetstack/cert-manager-controller:v1.14.4"
           - "quay.io/jetstack/cert-manager-webhook:v1.14.4"
@@ -43,9 +64,9 @@ jobs:
           - "registry.k8s.io/autoscaling/cluster-autoscaler:v1.28.5"
           - "registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.14.0"
           - "registry.k8s.io/metrics-server/metrics-server:v0.7.1"
-
-
-
+          - "ghcr.io/aquasecurity/trivy-operator:0.16.1"
+          - "quay.io/k8slens/bored-agent:0.12.8"
+          - "quay.io/k8slens/recurly-api-proxy:0.5.3"
           
     steps:
       # 1. Trivy scan for OS-level vulnerabilities
